# IoTuring_applesmc

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-release-publish-with-vtag.yml  build-release-with-vtag.yml  publish.yml
module/: smc-wrapper.c
