[build-system]
requires = ["setuptools>=61.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name        = "IoTuring-applesmc"
description = ""
version     = "v2023.1.3"
readme      = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Riccardo Briccola", email="riccardo.briccola.dev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
keywords = ["smc"]

[project.urls]
"Homepage" = "https://github.com/richibrics/IoTuring_applesmc/"
